--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Dancing+Script&family=Diplomata+SC&family=Inter&family=Raleway:wght@100&family=Ribeye+Marrow&family=Roboto+Condensed:ital,wght@0,300;1,400&family=Vast+Shadow&display=swap');
+
+body {
+  font-family: Alkatra, sans-serif;
+  margin: 0;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: black;
+  color: #fff;
 }
